.config/waybar/style.css
@import 'colors-waybar.css';

* {
    font-family: JetBrainsMono Nerd Font;
    font-size: 16px;
}

window#waybar {
    background-color: rgba(0, 0, 0, 0);
    color: @foreground;
    transition-property: background-color;
    transition-duration: 0.5s;
    opacity: 0.75;
}

window#waybar.hidden {
    opacity: 0.1;
}

#window {
    color: @foreground;
}

#pulseaudio,
#network, 
#cpu,
#memory,
#workspaces,
#custom-power-menu,
#custom-wallpaper,
#custom-launcher,
#custom-spotify,
#custom-theme,
#custom-pacman {
    color: @foreground;
    padding: 0px 10px;
    background-color: @background;
    border-radius: 20px;
    margin: 3px 0px 0px;
}

#custom-launcher {
    color: @color9;
    padding: 0 14 1 8;
    margin-left: 4px;
    margin-right: 6px;
    font-size: 17px;
}

#cpu {
    color: @color11;
    margin-right: 6px;
    font-size: 14px;
}

#memory {
    color: @color11;
    margin-right: 6px;
    font-size: 14px;
}

#workspaces {
    margin-right: 6px;
}

#workspaces button {
    color: @color11;
    box-shadow: inset 0 -3px transparent;
    margin-right: 0em;
    transition: all 0.2s cubic-bezier(0.1, -0.1, 0.1, 1);
    padding: 0 3 0 0;
}

#workspaces button.active {
    color: @color9;
    margin-right: 0em;
    transition: all 0.2s cubic-bezier(0.1, -0.1, 0.1, 1);

}

/* If workspaces is the leftmost module, omit left margin */
.modules-left > widget:first-child > #workspaces {
    margin-left: 0;
}

/* If workspaces is the rightmost module, omit right margin */
.modules-right > widget:last-child > #workspaces {
    margin-right: 0;
}

#custom-spotify {
    color: @color14;
    font-size: 14px;
}

@keyframes blink-update {
	to {
		background-color: @color9;
	}
}

#custom-pacman {
	animation-timing-function: linear;
	animation-iteration-count: infinite;
	animation-direction: alternate;
    color: @color11;
    font-size: 14px;
    margin-right: 6px;
    padding: 0 6 0 10;
}
#custom-pacman.pending-updates {
	animation-name: blink-update;
	animation-duration: 3s;
}

#custom-wallpaper {
    color: @color11;
    border-radius: 0;
}

#custom-theme {
    color: @color11;
    border-radius: 20 0 0 20;
    padding: 0 8 0 12;
    font-size: 15px;
}

#pulseaudio,
#network {
    background-color: @background;
}

#network,
#custom-wallpaper {
    padding: 0 8 0 8;
    font-size: 15px;
}

#network {
    color: @color11;
    border-right: none;
    border-left: none;
    margin-left: 0px;
    border-radius: 0;
}

#network.disconnected {
    color: @color9;
}

#pulseaudio {
    color: @color11;
    border-left: none;
    border-right: none;
    margin-left: 0px;
    border-radius: 0 20 20 0;
    padding: 0 14 0 8;
    font-size: 17px;
}

#pulseaudio.muted {
    color: @color9;
}

#clock {
     color: @foreground;
    padding: 0 5 0 14;
    background-color: @background;
    border-radius: 20px;
    margin: 3px 0px 0px;
    color: @color9;
    margin-left: 6px;
    font-size: 14px;
}

#custom-power-menu {
    color: @color9;
    margin-right: 4px;
    margin-left: 6px;
    padding: 0 3 1 0;
}

@keyframes blink {
    to {
        background-color: rgba(30, 34, 42, 0.5);
        color: #abb2bf;
    }
}

tooltip {
    border-radius: 15px;
    padding: 15px;
    background-color: @background;
    color: @foreground;
    font-family: JetBrainsMono Nerd Font;
}

tooltip label {
    padding: 5px;
    color: @foreground;
}

label:focus {
    background-color: @background;
}

